# eggcellent

./: .gitignore  CHANGELOG.md  README.md  example.py  setup.cfg
eggcellent/: __init__.py  eggcellent.py
