[metadata]
author = David Pattinson
author_email = djp65@cam.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Egg shapes.
download_url = https://github.com/organisation/eggcellent/releases/latest
keywords = keyword0, keyword1, keyword2
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = David Pattinson
maintainer_email = djp65@cam.ac.uk
name = eggcellent
platforms =
    Linux
    MacOS
    Windows
url = https://github.com/organisation/eggcellent
version = attr: eggcellent.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
