[metadata]
author = David Pattinson
author_email = davipatti10@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Egg shapes.
download_url = https://github.com/davipatti/eggcellent/releases/latest
keywords = egg
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = David Pattinson
maintainer_email = djp65@cam.ac.uk
name = eggcellent
platforms =
    Linux
    MacOS
    Windows
url = https://github.com/davipatti/eggcellent
version = attr: eggcellent.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
